kotlin-parser/src/test/semlang/validatorTests/fail/nameCollision2.sem

struct Bar {
  a: Integer
}

interface Bar {
  b(): Integer
}
